<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tw__composer_hint">What\'s Happening?</string>
    <string name="tw__like_tweet">Like Tweet</string>
    <string name="tw__liked_tweet">Undo Like</string>
    <string name="tw__loading_tweet">Loading Tweet</string>
    <string name="tw__login_btn_txt">Log in with Twitter</string>
    <string name="tw__max_tweet_chars">140</string>
    <string name="tw__pause">pause</string>
    <string name="tw__play">play</string>
    <string name="tw__post_tweet">Tweet</string>
    <string name="tw__relative_date_format_long">MM/dd/yy</string>
    <string name="tw__relative_date_format_short">MMM dd</string>
    <string name="tw__replay">replay</string>
    <string name="tw__retweeted_by_format">Retweeted by %1$s</string>
    <string name="tw__share_content_format">Check out @%1$s\'s Tweet: https://twitter.com/%1$s/status/%2$s</string>
    <string name="tw__share_subject_format">Tweet from %1$s (@%2$s)</string>
    <string name="tw__share_tweet">Share Tweet</string>
    <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
    <string name="tw__tweet_media">Tweet Media</string>
    <string name="X8_1280x720_200P">1280x720 200P 16:9</string>
    <string name="X8_1920x1080_100P">1920x1080 100P 16:9</string>
    <string name="X8_1920x1080_24P">1920x1080 24P 16:9</string>
    <string name="X8_1920x1080_30P">1920x1080 30P 16:9</string>
    <string name="X8_1920x1080_60P">1920x1080 60P 16:9</string>
    <string name="album_delete_fail">Delete failed</string>
    <string name="album_delete_success">Deleted</string>
    <string name="album_dialog_delete_title">Delete the selected files?</string>
    <string name="album_download">Download</string>
    <string name="album_head_title">Videos: %1$s, Pictures: %2$s</string>
    <string name="album_select_camera_title">Selected files: %1$s, Size: %2$s</string>
    <string name="album_select_title">%s files selected</string>
    <string name="app_fimi_slogn">Totally evolved</string>
    <string name="app_name">Mi8Test</string>
    <string name="app_product_name">FIMI Navi</string>
    <string name="app_version">1.0.10.20304</string>
    <string name="audio_title">Audio</string>
    <string name="camera_sd_format">Format SD Card</string>
    <string name="cancel">Cancel</string>
    <string name="country_select_search">Search</string>
    <string name="country_select_title">Select a country and region</string>
    <string name="date_today">今天</string>
    <string name="device_gh2_slogn">All views are in your hand</string>
    <string name="device_hand_gimbal">Mi Smartphone Gimbal</string>
    <string name="device_name">FIMI Navi</string>
    <string name="device_slogn">Totally evolved</string>
    <string name="downfw_device_hand_gimbal">Mi Smartphone Gimbal</string>
    <string name="downfw_device_x9">Mi Drone Mini</string>
    <string name="downfw_update_firmware_detail">Firmware size：%1$s</string>
    <string name="english">English</string>
    <string name="ensure">OK</string>
    <string name="error_fimware_update_aircraft_id_cannot_empty">Mi Drone ID cannot be left blank</string>
    <string name="error_system_client_data_illegal_data">Invalid data from client end</string>
    <string name="error_system_md5_signature_verification_cannot_pass">MD5 signature verification failed</string>
    <string name="error_system_system_error_database_exception">System database error</string>
    <string name="error_system_system_normal_response">Normal system response</string>
    <string name="error_user_email_input_too_long">Email addresses cannot exceed 50 characters</string>
    <string name="error_user_email_not_empty">Email cannot be left blank</string>
    <string name="error_user_email_not_right_format">Invalid email format. Please try again.</string>
    <string name="error_user_mobile_phone_format_is_incorrect">Phone format is incorrect</string>
    <string name="error_user_mobile_phones_cannot_be_empty">Mobile number cannot be left blank</string>
    <string name="error_user_no_way_to_know_how_to_log_in">Unknown login mode</string>
    <string name="error_user_not_enough_password_length">password is not long enough</string>
    <string name="error_user_password_inconsistent">The passwords are not the same. Please try again.</string>
    <string name="error_user_password_not_empty">Password cannot be left blank</string>
    <string name="error_user_phone_number_not_right_format">Please enter a valid phone number</string>
    <string name="error_user_the_user_password_incorrect">Password error, please try again.</string>
    <string name="error_user_the_verification_code_expired">Verification code expired, please get another one.</string>
    <string name="error_user_the_verification_code_made">Verification code invalid, please try again.</string>
    <string name="error_user_two_cipher_inconsistencies">Inconsistent password entered twice</string>
    <string name="error_user_user_already_exist">Account already exists!</string>
    <string name="media_cancel">Cancel</string>
    <string name="media_select_0_item">Selected 0 items</string>
    <string name="media_select_all">All</string>
    <string name="x8_rc_setting_america_rocker">Mode 2</string>
    <string name="x8_rc_setting_back_center_down">Back/Down</string>
    <string name="x8_rc_setting_battery_frame">Battery</string>
    <string name="x8_rc_setting_calibration">Calibration</string>
    <string name="x8_rc_setting_code">Pairing</string>
    <string name="x8_rc_setting_five_key_center">Five-Directional Button Customization· Center</string>
    <string name="x8_rc_setting_five_key_down">Five-Directional Button Customization· Down</string>
    <string name="x8_rc_setting_five_key_left">Five-Directional Button Customization· Left</string>
    <string name="x8_rc_setting_five_key_right">Five-Directional Button Customization· Right</string>
    <string name="x8_rc_setting_five_key_up">Five-Directional Button Customization· Up</string>
    <string name="x8_rc_setting_map_fpv">Map/FPV</string>
    <string name="x8_rc_setting_media_frame">Media</string>
    <string name="x8_rc_setting_rc_ap_mode">RC AP Mode</string>
    <string name="x8_rc_setting_rc_calibration">RC Calibration</string>
    <string name="x8_rc_setting_rc_code">RC Pairing</string>
    <string name="x8_rc_setting_rc_left_rocker">Left stick</string>
    <string name="x8_rc_setting_rc_right_rocker">Right stick</string>
    <string name="x8_rc_setting_rc_rocker_to_back_off">Backward</string>
    <string name="x8_rc_setting_rc_rocker_to_down">Down</string>
    <string name="x8_rc_setting_rc_rocker_to_forward">Forward</string>
    <string name="x8_rc_setting_rc_rocker_to_left">Turn left</string>
    <string name="x8_rc_setting_rc_rocker_to_left_turn">Turn left</string>
    <string name="x8_rc_setting_rc_rocker_to_right">Turn right</string>
    <string name="x8_rc_setting_rc_rocker_to_right_turn">Turn right</string>
    <string name="x8_rc_setting_rc_rocker_to_up">Up</string>
    <string name="x8_rc_setting_rocker_mode">Stick Mode</string>
    <string name="x8_rc_setting_self_check_frame">Self-check</string>
</resources>