<?xml version="1.0" encoding="utf-8"?>
<com.twitter.sdk.android.tweetui.TweetActionBarView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="horizontal" android:id="@+id/tw__tweet_action_bar" android:visibility="gone" style="@style/tw__TweetFillWidth">
    <com.twitter.sdk.android.tweetui.ToggleImageButton android:id="@+id/tw__tweet_like_button" android:layout_marginRight="@dimen/tw__tweet_action_button_spacing" android:src="@drawable/tw__like_action" android:layout_marginEnd="@dimen/tw__tweet_action_button_spacing" app:contentDescriptionOn="@string/tw__liked_tweet" app:contentDescriptionOff="@string/tw__like_tweet" style="@style/tw__TweetActionButton.Heart"/>
    <ImageButton android:id="@+id/tw__tweet_share_button" android:src="@drawable/tw__share_action" android:contentDescription="@string/tw__share_tweet" style="@style/tw__TweetActionButton.Share"/>
</com.twitter.sdk.android.tweetui.TweetActionBarView>
