<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/x8_rl_main_rc_item" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:scrollbars="none" android:fadingEdge="none" android:layout_width="match_parent" android:layout_height="match_parent" android:overScrollMode="never" app:layout_marginLeftPercent="1.478743%w" app:layout_marginTopPercent="1.478743%w" app:layout_marginRightPercent="1.478743%w" app:layout_marginBottomPercent="1.478743%w">
        <com.fimi.kernel.percent.PercentLinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:orientation="vertical" android:background="@color/white_5" android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.fimi.kernel.percent.PercentRelativeLayout android:paddingLeft="@dimen/x8s_main_rc_item_x3" android:paddingRight="@dimen/x8s_main_rc_item_x3" android:layout_width="match_parent" android:layout_height="@dimen/x8s_main_rc_item_x5">
                    <TextView android:textColor="@color/white_100" android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rc_calibration" android:layout_centerVertical="true"/>
                    <Button android:textSize="@dimen/textsize_36" android:textColor="@color/white_100" android:id="@+id/btn_rc_calibration" android:background="@drawable/x8_btn_fc_button_selector" android:layout_width="wrap_content" android:layout_height="0dp" android:text="@string/x8_rc_setting_calibration" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:textAllCaps="false" app:layout_heightPercent="59.597765%h"/>
                </com.fimi.kernel.percent.PercentRelativeLayout>
                <com.fimi.kernel.percent.PercentRelativeLayout android:paddingLeft="@dimen/x8s_main_rc_item_x3" android:paddingRight="@dimen/x8s_main_rc_item_x3" android:layout_width="match_parent" android:layout_height="@dimen/x8s_main_rc_item_x5">
                    <TextView android:textColor="@color/white_100" android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rocker_mode" android:layout_centerVertical="true"/>
                    <Button android:textSize="@dimen/textsize_36" android:textColor="@color/white_100" android:id="@+id/btn_rocker_mode" android:background="@drawable/x8_btn_fc_button_selector" android:layout_width="wrap_content" android:layout_height="0dp" android:text="@string/x8_rc_setting_america_rocker" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:textAllCaps="false" app:layout_heightPercent="59.597765%h"/>
                </com.fimi.kernel.percent.PercentRelativeLayout>
                <com.fimi.kernel.percent.PercentRelativeLayout android:paddingLeft="@dimen/x8s_main_rc_item_x3" android:paddingRight="@dimen/x8s_main_rc_item_x3" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/x8s_main_rc_item_x5">
                    <TextView android:textColor="@color/white_100" android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rc_code" android:layout_centerVertical="true"/>
                    <Button android:textSize="@dimen/textsize_36" android:textColor="@color/white_100" android:id="@+id/btn_rc_code" android:background="@drawable/x8_btn_fc_button_selector" android:layout_width="wrap_content" android:layout_height="0dp" android:text="@string/x8_rc_setting_code" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:textAllCaps="false" app:layout_heightPercent="59.597765%h"/>
                </com.fimi.kernel.percent.PercentRelativeLayout>
            </LinearLayout>
            <com.fimi.kernel.percent.PercentRelativeLayout android:background="@color/white_5" android:paddingLeft="@dimen/x8s_main_rc_item_x3" android:paddingRight="@dimen/x8s_main_rc_item_x3" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/x8s_main_rc_item_x5">
                <TextView android:textColor="@color/white_100" android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rc_ap_mode" android:layout_centerVertical="true"/>
                <com.fimi.app.x8s.widget.X8TabItem android:id="@+id/th_ap_module" android:padding="@dimen/x8s_main_rc_item_x1" android:layout_width="wrap_content" android:layout_height="@dimen/x8s_main_rc_item_x4" android:layout_alignParentRight="true" android:layout_centerInParent="true" app:src="@array/x8_fc_ap_module_state_option" app:radiusC="@dimen/x8s_main_rc_item_x2" app:text_sizeC="@dimen/textsize_36" app:text_select_color="@color/tabradio_attr_selected_text_color" app:text_unselect_color="@color/tabradio_attr_unselected_text_color" app:tab_select_color="@color/tabradio_attr_unselected_color" app:tab_unselect_color="@color/tabradio_attr_unselected_color" app:tab_space="@dimen/x8s_main_rc_item_x1" app:bg="#00000000" app:lineStroke="@dimen/x8s_main_rc_item_x1" app:lineColor="@color/white_25" app:default_index="1"/>
            </com.fimi.kernel.percent.PercentRelativeLayout>
            <View android:background="#00000000" android:layout_width="match_parent" android:layout_height="@dimen/x8s_main_fc_item_x3"/>
            <LinearLayout android:orientation="vertical" android:background="@color/white_5" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_marginTopPercent="0.99%w">
                <com.fimi.kernel.percent.PercentRelativeLayout android:paddingLeft="@dimen/x8s_main_rc_item_x3" android:paddingRight="@dimen/x8s_main_rc_item_x3" android:layout_width="match_parent" android:layout_height="@dimen/x8s_main_rc_item_x5">
                    <TextView android:textColor="@color/white_100" android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_five_key_up" android:layout_centerVertical="true"/>
                    <Button android:textSize="@dimen/textsize_36" android:textColor="@color/white_100" android:id="@+id/btn_five_key_up" android:background="@drawable/x8_btn_fc_button_selector" android:layout_width="wrap_content" android:layout_height="0dp" android:text="@string/x8_rc_setting_map_fpv" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:textAllCaps="false" app:layout_heightPercent="59.597765%h"/>
                </com.fimi.kernel.percent.PercentRelativeLayout>
                <com.fimi.kernel.percent.PercentRelativeLayout android:paddingLeft="@dimen/x8s_main_rc_item_x3" android:paddingRight="@dimen/x8s_main_rc_item_x3" android:layout_width="match_parent" android:layout_height="@dimen/x8s_main_rc_item_x5">
                    <TextView android:textColor="@color/white_100" android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_five_key_down" android:layout_centerVertical="true"/>
                    <Button android:textSize="@dimen/textsize_36" android:textColor="@color/white_100" android:id="@+id/btn_five_key_down" android:background="@drawable/x8_btn_fc_button_selector" android:layout_width="wrap_content" android:layout_height="0dp" android:text="@string/x8_rc_setting_back_center_down" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:textAllCaps="false" app:layout_heightPercent="59.597765%h"/>
                </com.fimi.kernel.percent.PercentRelativeLayout>
                <com.fimi.kernel.percent.PercentRelativeLayout android:paddingLeft="@dimen/x8s_main_rc_item_x3" android:paddingRight="@dimen/x8s_main_rc_item_x3" android:layout_width="match_parent" android:layout_height="@dimen/x8s_main_rc_item_x5">
                    <TextView android:textColor="@color/white_100" android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_five_key_left" android:layout_centerVertical="true"/>
                    <Button android:textSize="@dimen/textsize_36" android:textColor="@color/white_100" android:id="@+id/btn_five_key_left" android:background="@drawable/x8_btn_fc_button_selector" android:layout_width="wrap_content" android:layout_height="0dp" android:text="@string/x8_rc_setting_battery_frame" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:textAllCaps="false" app:layout_heightPercent="59.597765%h"/>
                </com.fimi.kernel.percent.PercentRelativeLayout>
                <com.fimi.kernel.percent.PercentRelativeLayout android:paddingLeft="@dimen/x8s_main_rc_item_x3" android:paddingRight="@dimen/x8s_main_rc_item_x3" android:layout_width="match_parent" android:layout_height="@dimen/x8s_main_rc_item_x5">
                    <TextView android:textColor="@color/white_100" android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_five_key_right" android:layout_centerVertical="true"/>
                    <Button android:textSize="@dimen/textsize_36" android:textColor="@color/white_100" android:id="@+id/btn_five_key_right" android:background="@drawable/x8_btn_fc_button_selector" android:layout_width="wrap_content" android:layout_height="0dp" android:text="@string/x8_rc_setting_self_check_frame" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:textAllCaps="false" app:layout_heightPercent="59.597765%h"/>
                </com.fimi.kernel.percent.PercentRelativeLayout>
                <com.fimi.kernel.percent.PercentRelativeLayout android:paddingLeft="@dimen/x8s_main_rc_item_x3" android:paddingRight="@dimen/x8s_main_rc_item_x3" android:layout_width="match_parent" android:layout_height="@dimen/x8s_main_rc_item_x5">
                    <TextView android:textColor="@color/white_100" android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_five_key_center" android:layout_centerVertical="true"/>
                    <Button android:textSize="@dimen/textsize_36" android:textColor="@color/white_100" android:id="@+id/btn_five_key_center" android:background="@drawable/x8_btn_fc_button_selector" android:layout_width="wrap_content" android:layout_height="0dp" android:text="@string/x8_rc_setting_media_frame" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:textAllCaps="false" app:layout_heightPercent="59.597765%h"/>
                </com.fimi.kernel.percent.PercentRelativeLayout>
            </LinearLayout>
        </com.fimi.kernel.percent.PercentLinearLayout>
    </ScrollView>
</com.fimi.kernel.percent.PercentRelativeLayout>
