<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/x8_rl_main_rc_item_rocker_mode_layout" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/rl_drone_calibartion_title" android:background="@color/white_5" android:layout_width="match_parent" android:layout_height="0dp" app:layout_heightPercent="14.814814%h" app:layout_marginLeftPercent="1.478743%w" app:layout_marginTopPercent="1.478743%w" app:layout_marginRightPercent="1.478743%w">
        <ImageView android:id="@+id/img_return" android:background="@drawable/x8_img_return" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true"/>
        <TextView android:textSize="@dimen/textsize_45" android:textColor="@color/white_100" android:id="@+id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rocker_mode" android:layout_centerInParent="true"/>
    </RelativeLayout>
    <com.fimi.kernel.percent.PercentRelativeLayout android:background="@color/white_5" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/rl_drone_calibartion_title" app:layout_marginLeftPercent="1.478743%w" app:layout_marginTopPercent="1.11111%w" app:layout_marginRightPercent="1.478743%w" app:layout_marginBottomPercent="1.478743%w">
        <com.fimi.app.x8s.widget.X8TabItem android:id="@+id/th_switch_rockers" android:padding="@dimen/x8s_main_rc_item_rocker_mode_x1" android:layout_width="wrap_content" android:layout_height="@dimen/x8s_main_rc_item_rocker_mode_x4" android:layout_alignParentTop="true" android:layout_centerInParent="true" app:layout_widthPercent="41.677626%w" app:layout_heightPercent="5.083195%w" app:layout_marginTopPercent="0.6347%w" app:src="@array/x8_rocker_mode_option" app:radiusC="@dimen/x8s_main_rc_item_rocker_mode_x3" app:text_sizeC="@dimen/textsize_36" app:text_select_color="@color/tabradio_attr_selected_text_color" app:text_unselect_color="@color/tabradio_attr_unselected_text_color" app:tab_select_color="@color/tabradio_attr_selected_color" app:tab_unselect_color="@color/tabradio_attr_unselected_color" app:tab_space="@dimen/x8s_main_rc_item_rocker_mode_x1" app:bg="#00000000" app:lineStroke="@dimen/x8s_main_rc_item_rocker_mode_x1" app:lineColor="@color/white_25" app:default_index="2"/>
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_marginLeftPercent="13.976404%w" app:layout_marginTopPercent="8.386224%w" app:layout_marginRightPercent="55.145139%w" app:layout_marginBottomPercent="1.271275%w">
            <ImageView android:id="@+id/img_rocker_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/x8_img_rc_rocker_left" android:layout_below="@+id/tv_left_side_up" android:layout_centerHorizontal="true"/>
            <TextView android:textSize="@dimen/textsize_33" android:textColor="@color/white_100" android:gravity="center" android:id="@+id/tv_left_side_left" android:paddingRight="@dimen/x8s_main_rc_item_rocker_mode_x2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rc_rocker_to_left" android:layout_toLeftOf="@+id/img_rocker_left" android:layout_alignTop="@+id/img_rocker_left" android:layout_alignBottom="@+id/img_rocker_left" android:layout_alignParentLeft="true"/>
            <TextView android:textSize="@dimen/textsize_33" android:textColor="@color/white_100" android:gravity="center" android:id="@+id/tv_left_side_right" android:paddingLeft="@dimen/x8s_main_rc_item_rocker_mode_x2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rc_rocker_to_right" android:layout_toRightOf="@+id/img_rocker_left" android:layout_alignTop="@+id/img_rocker_left" android:layout_alignBottom="@+id/img_rocker_left" android:layout_alignParentRight="true"/>
            <TextView android:textSize="@dimen/textsize_33" android:textColor="@color/white_100" android:id="@+id/tv_left_side_up" android:paddingBottom="@dimen/x8s_main_rc_item_rocker_mode_x2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rc_rocker_to_forward" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
            <TextView android:textSize="@dimen/textsize_33" android:textColor="@color/white_100" android:id="@+id/tv_left_side_down" android:paddingTop="@dimen/x8s_main_rc_item_rocker_mode_x2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rc_rocker_to_back_off" android:layout_below="@+id/img_rocker_left" android:layout_centerHorizontal="true"/>
            <TextView android:textSize="@dimen/textsize_36" android:textColor="@color/x8_fc_all_setting_blue" android:gravity="center" android:id="@+id/rocker_left" android:paddingTop="@dimen/x8s_main_rc_item_rocker_mode_x2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rc_left_rocker" android:layout_below="@+id/tv_left_side_down" android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_marginLeftPercent="55.145139%w" app:layout_marginTopPercent="8.386224%w" app:layout_marginRightPercent="13.976404%w" app:layout_marginBottomPercent="1.271275%w">
            <ImageView android:id="@+id/img_rocker_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/x8_img_rc_rocker_right" android:layout_below="@+id/tv_right_side_up" android:layout_centerHorizontal="true"/>
            <TextView android:textSize="@dimen/textsize_33" android:textColor="@color/white_100" android:gravity="center" android:id="@+id/tv_right_side_left" android:paddingRight="@dimen/x8s_main_rc_item_rocker_mode_x2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rc_rocker_to_left_turn" android:layout_toLeftOf="@+id/img_rocker_right" android:layout_alignTop="@+id/img_rocker_right" android:layout_alignBottom="@+id/img_rocker_right" android:layout_alignParentLeft="true"/>
            <TextView android:textSize="@dimen/textsize_33" android:textColor="@color/white_100" android:gravity="center" android:id="@+id/tv_right_side_right" android:paddingLeft="@dimen/x8s_main_rc_item_rocker_mode_x2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rc_rocker_to_right_turn" android:layout_toRightOf="@+id/img_rocker_right" android:layout_alignTop="@+id/img_rocker_right" android:layout_alignBottom="@+id/img_rocker_right" android:layout_alignParentRight="true"/>
            <TextView android:textSize="@dimen/textsize_33" android:textColor="@color/white_100" android:id="@+id/tv_right_side_up" android:paddingBottom="@dimen/x8s_main_rc_item_rocker_mode_x2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rc_rocker_to_up" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
            <TextView android:textSize="@dimen/textsize_33" android:textColor="@color/white_100" android:id="@+id/tv_right_side_down" android:paddingTop="@dimen/x8s_main_rc_item_rocker_mode_x2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rc_rocker_to_down" android:layout_below="@+id/img_rocker_right" android:layout_centerHorizontal="true"/>
            <TextView android:textSize="@dimen/textsize_36" android:textColor="@color/x8_fc_all_setting_blue" android:gravity="center" android:paddingTop="@dimen/x8s_main_rc_item_rocker_mode_x2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x8_rc_setting_rc_right_rocker" android:layout_below="@+id/tv_right_side_down" android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </com.fimi.kernel.percent.PercentRelativeLayout>
</com.fimi.kernel.percent.PercentRelativeLayout>
